--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,5 +1,5 @@
 copy.src.files=false
 copy.src.target=
-index.file=index.php
+index.file=application/index.php
 run.as=LOCAL
-url=http://local.www.rsvpme.com/rsvpme/webapp
+url=http://local.www.rsvpme.com/rsvpme/
